--- a/STA490-Group-5-main/LMM/LMM_6month.Rmd
+++ b/STA490-Group-5-main/LMM/LMM_6month.Rmd
@@ -22,7 +22,7 @@ library(lmerTest)
 ```
 
 ```{r, echo = FALSE}
-concentration_data = read_excel("NHS_2023_Data_October_31_UniversityofToronto_First_phase_modified_Will.xlsx", sheet = "Passive air- PUF(pgm-3)", skip = 4)
+concentration_data = read_excel("NHS_2023_Data_October_31_University of Toronto_First phase_modified_Will.xlsx", sheet = "Passive air- PUF(pgm-3)", skip = 4)
 selected_concentration_data <- concentration_data[, 1:15]
 
 tech_survey_data = read_excel("20231027_Technician Survey Data.xlsx")
