--- a/STA490-Group-5-main/LMM/LMM_all_houses.rmd
+++ b/STA490-Group-5-main/LMM/LMM_all_houses.rmd
@@ -22,13 +22,13 @@ library(lmerTest)
 ```
 
 ```{r, echo = FALSE}
-concentration_data = read_excel("NHS_2023_Data_October_31_UniversityofToronto_First_phase_modified_Will.xlsx", sheet = "Passive air- PUF(pgm-3)", skip = 4)
+concentration_data = read_excel("NHS_2023_Data_October_31_University of Toronto_First phase_modified_Will.xlsx", sheet = "Passive air- PUF(pgm-3)", skip = 4)
 selected_concentration_data <- concentration_data[1:33, c(1:15, 18,19,20,23,26)]
 
-tech_survey_data = read_excel("20231027_Technician_Survey_Data.xlsx")
+tech_survey_data = read_excel("20231027_Technician Survey Data.xlsx")
 tech_survey_data <- tech_survey_data %>% 
   select(id, base_ac_yn, hrv_on_yn)
-survey_data <- read_excel("20231027_0-12_Month_Questionnaire_Data.xlsx") %>% select(id, low_VOC_home, paints_yn)
+survey_data <- read_excel("20231027_0-12 Month Questionnaire Data.xlsx") %>% select(id, low_VOC_home, paints_yn)
 selected_survey_data <- survey_data[1:44,]
 
 merged_data = merge(selected_concentration_data, tech_survey_data, by.x = 'House_ID', by.y='id')
